Fixed an issue with the hero subheading clipping

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -73,6 +73,8 @@ $aniduration: 20s;
     
         &__subheading {
             font-size: 2.4rem;
+            display: inline-block;
+            padding-bottom: 0.3rem;
         }
     }
 
